# MOJUKO_MPC_VMWARE

./: .gitignore  .gitmodules  CHANGELOG_Creeper_Phase1.txt  CLAUDE.md  MPC_black_box_learning.txt  MUJOCO_LOG.TXT  README.md  TRIAL_LOG.md  build_simulate.sh  project_analysis_brief.txt
Creeper/meshes/: FR_calf.stl  FR_thigh.stl  RL_calf.stl  RL_hip.stl  RR_calf.stl  RR_hip.stl
Creeper/urdf/: Creeper.urdf
legged_control/launch_simulation/launch/: legged_robot_sqp.launch.py
legged_control/legged_msgs/: CMakeLists.txt  package.xml
legged_control/legged_msgs/msg/: GaitModeSchedule.msg  JointControlData.msg  SimulatorSensorData.msg  SimulatorStateData.msg
legged_control/legged_msgs/srv/: StartControl.srv
legged_control/motion_control/: CMakeLists.txt  package.xml
legged_control/motion_control/include/motion_control/common/: ModelSettings.h  Types.h  utils.h
legged_control/motion_control/include/motion_control/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
legged_control/motion_control/include/motion_control/cost/: LeggedRobotQuadraticTrackingCost.h
legged_control/motion_control/include/motion_control/dynamics/: LeggedRobotDynamicsAD.h
legged_control/motion_control/include/motion_control/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
legged_control/motion_control/include/motion_control/gait/: Gait.h  GaitSchedule.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
legged_control/motion_control/include/motion_control/initialization/: LeggedRobotInitializer.h
legged_control/motion_control/include/motion_control/legged_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
legged_control/motion_control/include/motion_control/legged_interface/: LeggedRobotInterface.h
legged_control/motion_control/include/motion_control/legged_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
legged_control/motion_control/include/motion_control/reference_manager/: SwitchedModelReferenceManager.h
legged_control/motion_control/include/motion_control/robot_precomputation/: LeggedRobotPreComputation.h
legged_control/motion_control/include/motion_control/ros_interfaces/: GaitReceiver.h  MPC_WBC_ROS_Interface.h  RosReferenceManager.h
legged_control/motion_control/src/: LeggedRobotSqpMpcNode.cpp  height_commander.cpp  mpc_standalone.cpp
legged_control/motion_control/src/common/: ModelSettings.cpp
legged_control/motion_control/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
legged_control/motion_control/src/dynamics/: LeggedRobotDynamicsAD.cpp
legged_control/motion_control/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
legged_control/motion_control/src/gait/: Gait.cpp  GaitSchedule.cpp  ModeSequenceTemplate.cpp
legged_control/motion_control/src/initialization/: LeggedRobotInitializer.cpp
legged_control/motion_control/src/legged_estimation/: LinearKalmanFilter.cpp  StateEstimateBase.cpp
legged_control/motion_control/src/legged_interface/: LeggedRobotInterface.cpp
legged_control/motion_control/src/legged_wbc/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
legged_control/motion_control/src/reference_manager/: SwitchedModelReferenceManager.cpp
legged_control/motion_control/src/robot_precomputation/: LeggedRobotPreComputation.cpp
legged_control/motion_control/src/ros_interfaces/: GaitReceiver.cpp  MPC_WBC_ROS_Interface.cpp  RosReferenceManager.cpp
legged_control/mujoco_simulator/: CMakeLists.txt  launch_simulate.sh  package.xml
legged_control/mujoco_simulator/include/mujoco_simulator/: MujocoSimulation.hpp.bak
legged_control/mujoco_simulator/models/creeper/meshes/: FL_calf.stl  FL_hip.stl  FL_thigh.stl  FR_hip.stl  RL_thigh.stl  RR_thigh.stl
legged_control/mujoco_simulator/models/creeper/urdf/: creeper.urdf  creeper.xml  creeper.xml.bak  robot.urdf  robot.xml
legged_control/mujoco_simulator/scripts/: force_monitor.py
legged_control/mujoco_simulator/src/: MujocoSimulation.cpp.bak  SimpleConfig.h
legged_control/user_command/: CMakeLists.txt  package.xml
legged_control/user_command/config/b1/: simulation.info  task.info
legged_control/user_command/config/creeper/: reference.info  simulation.info  task.info
mujoco/mujoco-3.2.2/simulate/: main.cc  mpc_shm.h
