<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_simulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2805140006@qq.com">zhx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <build_depend>mujoco</build_depend>
  <exec_depend>mujoco</exec_depend>
  <depend>legged_msgs</depend>
  <depend>ocs2_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
